[project]
name = "mini-swe-agent-swebench-lite"
version = "1.0.0"
description = "Run mini-SWE-agent on SWE-bench Lite with SGLang"
requires-python = ">=3.10"
dependencies = ["mini-swe-agent[full]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mini_swe_agent_swebench_lite"]
